--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "fast-deep-equal": "^3.1.1",
+    "moize": "^5.4.6",
     "phaser": "^3.20.1",
     "seedrandom": "^3.0.5",
     "ts-essentials": "^3.0.5"
